--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
           <h5 class="fw-bold"><i class="bi bi-box-seam me-2"></i>Що входить</h5>
           <ul class="mb-0">
             <li>Конспекти та PDF-пам'ятки по годівлі/гігієні.</li>
-            <li>Відеоінструкції: інкубатор, випойка, гнізда.</li>
+            <li>Відеоінструкції: інкубатор, випойка.</li>
             <li>Таблиці у Google Sheets для розрахунків.</li>
-            <li>Сертифікат проходження.</li>
+            <li>Підтвердження завершення курсу.</li>
           </ul>
         </div>
       </div>
@@ -465,21 +465,19 @@
         <div class="d-flex flex-column flex-md-row gap-3">
           <div class="card p-4 flex-fill">
             <div class="d-flex align-items-center mb-2"><i class="bi bi-leaf me-2 text-success"></i><h5 class="fw-bold mb-0">Базовий</h5></div>
-            <p class="display-6 fw-bolder" style="color:var(--green-deep)">1990 грн</p>
+            <p class="display-6 fw-bolder" style="color:var(--green-deep)">299 грн</p>
             <ul class="list-unstyled">
               <li><i class="bi bi-check-lg text-success me-1"></i>Усі уроки та записи</li>
               <li><i class="bi bi-check-lg text-success me-1"></i>Матеріали та чек-листи</li>
-              <li><i class="bi bi-check-lg text-success me-1"></i>Сертифікат проходження</li>
             </ul>
             <a class="btn btn-accent w-100" data-bs-toggle="modal" href="#signup">Обрати</a>
           </div>
           <div class="card p-4 flex-fill border border-success">
             <div class="d-flex align-items-center mb-2"><i class="bi bi-award me-2 text-success"></i><h5 class="fw-bold mb-0">Pro + наставник</h5></div>
-            <p class="display-6 fw-bolder" style="color:var(--green-deep)">3490 грн</p>
+            <p class="display-6 fw-bolder" style="color:var(--green-deep)">499 грн</p>
             <ul class="list-unstyled">
               <li><i class="bi bi-check-lg text-success me-1"></i>Все з базового</li>
-              <li><i class="bi bi-check-lg text-success me-1"></i>Перевірка ДЗ</li>
-              <li><i class="bi bi-check-lg text-success me-1"></i>Консультація 1:1</li>
+              <li><i class="bi bi-check-lg text-success me-1"></i>Підтвердження завершення курсу</li>
             </ul>
             <a class="btn btn-accent w-100" data-bs-toggle="modal" href="#signup">Обрати</a>
           </div>
