--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="card p-3 h-100">
               <div class="icon mb-2"><i class="bi bi-people"></i></div>
               <div class="fw-bold">Спільнота</div>
-              <div class="muted small">Підтримка однодумців та кураторів.</div>
+              <div class="muted small">Підтримка однодумців та автора курсу.</div>
             </div>
           </div>
         </div>
@@ -478,6 +478,7 @@
             <ul class="list-unstyled">
               <li><i class="bi bi-check-lg text-success me-1"></i>Все з базового</li>
               <li><i class="bi bi-check-lg text-success me-1"></i>Підтвердження завершення курсу</li>
+              <li><i class="bi bi-check-lg text-success me-1"></i>Підтримка в чаті протягом 30 днів</li>
             </ul>
             <a class="btn btn-accent w-100" data-bs-toggle="modal" href="#signup">Обрати</a>
           </div>
